retour sans include

--- a/fr/index.html
+++ b/fr/index.html
@@ -11,4 +11,110 @@
 </head>
 
 
+<body style="color: rgb(0, 0, 0); background-color:#D5DBDC;" link="#0000ee" vlink="#551a8b">
+
+<br>
+<font size="+3">
+J&eacuter&eacutemy Rouot</font> 
+
+<img style="height: 213px; float: left;" alt="" src="img/jr.jpg" hspace="50">
+<br>
+
+<br>
+
+<font style="font-weight: bold;" size="+1">
+Postdoctoral researcher</font> 
+<br>Laboratory for Analysis and Architecture of Systems
+<a href="http://www.laas.fr" style="text-decoration: none;">(LAAS)</a> 
+, Toulouse.
+<br>
+<br><a href="http://www.laas.fr" style="text-decoration: none;"><img src="img/logo_laas.png" HEIGHT=90></a>
+<a href="http://www.cnrs.fr" style="text-decoration: none;"><img src="img/logo_cnrs.jpeg" HEIGHT=90 BORDER=0 align=bottom></a>
+<br>
+<br>
+
+<p align="justify"><b>Address</b>
+<br>e-mail: <a href="mailto:jrouot@zoho.com">jrouot@zoho.com</a>
+<br>LAAS-CNRS
+<br>7 Avenue du Colonel Roche
+<br>31 077 Toulouse Cedex 4 
+
+<br>
+<br><a href="file/cv-1216.pdf">CV</a>
+
+
+<p align="justify"><b>Research</b>
+<br><i>Interests:</i>
+Geometric control theory, Optimization and Control, Applications in Swimming at low Reynolds number, Nuclear magnetic resonance and Spatial mechanics, 
+Numerical methods
+<br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
+<br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a>
+
+<br>
+<br><b>Submitted monograph</b>
+<ul>
+<li>
+B. Bonnard, M. Chyba, J. Rouot. Working Examples In Geometric Optimal
+Control. Springerbriefs.  (2016)
+<a href="file/monograph16.pdf">[pdf]</a>
+</li>
+</ul>
+
+<br><b>Submitted papers</b>
+<ul>
+<li>
+P. Bettiol, B. Bonnard, J. Rouot. Optimal strokes at low Reynolds number: a geometric and
+numerical study of Copepod and Purcell swimmers. (2016) 
+<a href="file/siam16.pdf">[pdf]</a>
+</li>
+<li>
+P. Bettiol, B. Bonnard, A. Nolot, J. Rouot. Optimal control theory and the efficiency of the
+swimming mechanism of the Copepod Zooplankton. (2016)
+<a href="file/ifac16.pdf">[pdf]</a>
+</li>
+</ul>
+
+<br><b>Papers in books with peer reviews</b>
+<ul>
+<li>
+P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon, J. Rouot. The three links Purcell swimmer
+and some geometric problems related to periodic optimal controls. Variational methods in
+Imaging and geometric control, published in 
+Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
+<a href="file/ricam15.pdf">[pdf]</a>
+</li>
+<li> B. Bonnard, H. Henninger, J. Rouot. Lunar perturbation of the metric 
+associated to the averaged orbital transfer. 
+Analysis and geometry in control theory and its applications, 
+published in Springer InDam series, vol. 11, 2015.
+<a href="file/zermelo14.pdf">[pdf]</a>
+</li>
+</ul>
+
+<br><b>Proceedings with peer reviews</b>
+<ul>
+<li>
+B. Bonnard, M. Chyba, J. Rouot, D. Takagi. A Numerical Approach to the Optimal Control
+and Efficiency of the Copepod Swimmer. In Proceedings of the 55th IEEE Conference on
+Decision and Control, 2016.
+<a href="file/cdc-copepod16.pdf">[pdf]</a>
+</li>
+<li>
+B. Bonnard, A. Jacquemard, J. Rouot. Optimal Control of an Ensemble of Bloch Equations
+with Applications in MRI. In Proceedings of the 55th IEEE Conference on Decision and
+Control, 2016.
+<a href="file/cdc-mri16.pdf">[pdf]</a>
+</li>
+</ul>
+
+<p align="justify"><b>Education</b>
+<br>PhD in Applied Mathematics
+(<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016), 
+<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet
+<br>Ing&eacutenieur in Applied Mathematics / Computer Science
+(<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
+none;">Grenoble INP - ENSIMAG</a>, 2013)
+<br>
+
+</body>
 </html>
