--- a/fr/index.html
+++ b/fr/index.html
@@ -17,7 +17,7 @@
 <font size="+3">
 J&eacuter&eacutemy Rouot</font> 
 
-<img style="height: 213px; float: left;" alt="" src="img/jr.jpg" hspace="50">
+<img style="height: 213px; float: left;" alt="" src="../img/jr.jpg" hspace="50">
 <br>
 
 <br>
@@ -28,8 +28,8 @@ Postdoctoral researcher</font>
 <a href="http://www.laas.fr" style="text-decoration: none;">(LAAS)</a> 
 , Toulouse.
 <br>
-<br><a href="http://www.laas.fr" style="text-decoration: none;"><img src="img/logo_laas.png" HEIGHT=90></a>
-<a href="http://www.cnrs.fr" style="text-decoration: none;"><img src="img/logo_cnrs.jpeg" HEIGHT=90 BORDER=0 align=bottom></a>
+<br><a href="http://www.laas.fr" style="text-decoration: none;"><img src="../img/logo_laas.png" HEIGHT=90></a>
+<a href="http://www.cnrs.fr" style="text-decoration: none;"><img src="../img/logo_cnrs.jpeg" HEIGHT=90 BORDER=0 align=bottom></a>
 <br>
 <br>
 
