--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<title>Homepage of Jeremy Rouot</title>
   <link rel="alternate" hreflang="en" href="http://jeremyrouot.github.io/homepage" />
-  <link rel="alternate" hreflang="fr" href="http://jeremyrouot.github.io/fr/homepage" />
+  <link rel="alternate" hreflang="fr" href="http://jeremyrouot.github.io/homepage/fr" />
 </head>
 
 
