--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Postdoctoral researcher</font>
 <br>31 077 Toulouse Cedex 4 
 
 <br>
-<br><a href="file/cv-1216.pdf">CV</a>
+<br><a href="file/cv.pdf">CV</a>
 
 
 <p align="justify"><b>Research</b>
