--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
 	<meta name="author" content="J&eacuter&eacutemy Rouot">
 	<meta name="description" content="Homepage of Jeremy Rouot" />
-	<meta name="Keywords" content="Jeremy Rouot homepage">
+	<meta name="Keywords" content="J&eacuter&eacutemy Jeremy Rouot homepage ">
 	<meta http-equiv="Pragma" content="no-cache">
 	<title>Homepage of Jeremy Rouot</title>
-  <link rel="alternate" hreflang="en" href="http://jeremyrouot.github.io/homepage" />
-  <link rel="alternate" hreflang="fr" href="http://jeremyrouot.github.io/homepage/fr" />
 </head>
 
 
@@ -45,8 +43,9 @@ Postdoctoral researcher</font>
 
 <p align="justify"><b>Research</b>
 <br><i>Interests:</i>
-Geometric control theory, Optimization and Control, Applications in Swimming at low Reynolds number, Nuclear magnetic resonance and Spatial mechanics, 
-Numerical methods
+Geometric control theory, Optimization and Control, Applications in Swimming at
+low Reynolds number, Nuclear magnetic resonance and Spatial mechanics, 
+Global optimization with polynomials, Numerical methods
 <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
 <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a>
 
@@ -110,7 +109,7 @@ Control, 2016.
 <p align="justify"><b>Education</b>
 <br>PhD in Applied Mathematics
 (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016), 
-<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet
+<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a>  
 <br>Ing&eacutenieur in Applied Mathematics / Computer Science
 (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
 none;">Grenoble INP - ENSIMAG</a>, 2013)
