--- a/fr/index.html
+++ b/fr/index.html
@@ -39,7 +39,7 @@ Postdoctoral researcher</font>
 <br>31 077 Toulouse Cedex 4 
 
 <br>
-<br><a href="file/cv.pdf">CV</a>
+<br><a href="../file/cv.pdf">CV</a>
 
 
 <p align="justify"><b>Research</b>
@@ -56,7 +56,7 @@ Global optimization with polynomials, Numerical methods
 <li>
 B. Bonnard, M. Chyba, J. Rouot. Working Examples In Geometric Optimal
 Control. Springerbriefs.  (2016)
-<a href="file/monograph16.pdf">[pdf]</a>
+<a href="../file/monograph16.pdf">[pdf]</a>
 </li>
 </ul>
 
@@ -65,12 +65,12 @@ Control. Springerbriefs.  (2016)
 <li>
 P. Bettiol, B. Bonnard, J. Rouot. Optimal strokes at low Reynolds number: a geometric and
 numerical study of Copepod and Purcell swimmers. (2016) 
-<a href="file/siam16.pdf">[pdf]</a>
+<a href="../file/siam16.pdf">[pdf]</a>
 </li>
 <li>
 P. Bettiol, B. Bonnard, A. Nolot, J. Rouot. Optimal control theory and the efficiency of the
 swimming mechanism of the Copepod Zooplankton. (2016)
-<a href="file/ifac16.pdf">[pdf]</a>
+<a href="../file/ifac16.pdf">[pdf]</a>
 </li>
 </ul>
 
@@ -81,13 +81,13 @@ P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon, J. Rouot. The three links Purce
 and some geometric problems related to periodic optimal controls. Variational methods in
 Imaging and geometric control, published in 
 Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
-<a href="file/ricam15.pdf">[pdf]</a>
+<a href="../file/ricam15.pdf">[pdf]</a>
 </li>
 <li> B. Bonnard, H. Henninger, J. Rouot. Lunar perturbation of the metric 
 associated to the averaged orbital transfer. 
 Analysis and geometry in control theory and its applications, 
 published in Springer InDam series, vol. 11, 2015.
-<a href="file/zermelo14.pdf">[pdf]</a>
+<a href="../file/zermelo14.pdf">[pdf]</a>
 </li>
 </ul>
 
@@ -97,20 +97,20 @@ published in Springer InDam series, vol. 11, 2015.
 B. Bonnard, M. Chyba, J. Rouot, D. Takagi. A Numerical Approach to the Optimal Control
 and Efficiency of the Copepod Swimmer. In Proceedings of the 55th IEEE Conference on
 Decision and Control, 2016.
-<a href="file/cdc-copepod16.pdf">[pdf]</a>
+<a href="../file/cdc-copepod16.pdf">[pdf]</a>
 </li>
 <li>
 B. Bonnard, A. Jacquemard, J. Rouot. Optimal Control of an Ensemble of Bloch Equations
 with Applications in MRI. In Proceedings of the 55th IEEE Conference on Decision and
 Control, 2016.
-<a href="file/cdc-mri16.pdf">[pdf]</a>
+<a href="../file/cdc-mri16.pdf">[pdf]</a>
 </li>
 </ul>
 
 <p align="justify"><b>Education</b>
 <br>PhD in Applied Mathematics
 (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016), 
-<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a>  
+<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="../file/thesis-rouot.pdf">[pdf]</a>  
 <br>Ing&eacutenieur in Applied Mathematics / Computer Science
 (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
 none;">Grenoble INP - ENSIMAG</a>, 2013)
