--- a/fr/index.html
+++ b/fr/index.html
@@ -39,7 +39,10 @@ Postdoctoral researcher</font>
 <br>31 077 Toulouse Cedex 4 
 
 <br>
-<br><a href="../file/cv.pdf">CV</a>
+<br><b>CV  </b> 
+<br>
+french <a href="../file/cv-jr-fr.pdf">[pdf]</a> 
+english <a href="../file/cv-jr-en.pdf">[pdf]</a> 
 
 
 <p align="justify"><b>Research</b>
