--- a/fr/index.html
+++ b/fr/index.html
@@ -47,9 +47,9 @@ english <a href="../file/cv-jr-en.pdf">[pdf]</a>
 
 <p align="justify"><b>Research</b>
 <br><i>Interests:</i>
-Geometric control theory, Optimization and Control, Applications in Swimming at
-low Reynolds number, Nuclear magnetic resonance and Spatial mechanics, 
-Global optimization with polynomials, Numerical methods
+    Geometric control theory, Optimization and optimal control, Applications in swimming at
+    low Reynolds number, Nuclear magnetic resonance, Orbital transfer with low thrust, inverse optimal control in Robotics,  
+    Global optimization with polynomials, Inverse optimal control, Numerical methods. 
 <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
 <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a>
 
@@ -113,7 +113,7 @@ Control, 2016.
 <p align="justify"><b>Education</b>
 <br>PhD in Applied Mathematics
 (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016), 
-<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="../file/thesis-rouot.pdf">[pdf]</a>  
+<i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
 <br>Ing&eacutenieur in Applied Mathematics / Computer Science
 (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
 none;">Grenoble INP - ENSIMAG</a>, 2013)
