--- a/fr/index.html
+++ b/fr/index.html
@@ -48,7 +48,7 @@ english <a href="../file/cv-jr-en.pdf">[pdf]</a>
 <p align="justify"><b>Research</b>
 <br><i>Interests:</i>
     Geometric control theory, Optimization and optimal control, Applications in swimming at
-    low Reynolds number, Nuclear magnetic resonance, Orbital transfer with low thrust, inverse optimal control in Robotics,  
+    low Reynolds number, Nuclear magnetic resonance, Orbital transfer with low thrust,  
     Global optimization with polynomials, Inverse optimal control, Numerical methods. 
 <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
 <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a>
