--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br>
 
     <p align="justify"><b>Address</b>
-    <br>e-mail: <a href="mailto:jrouot@zoho.com">jrouot@zoho.com</a>
+    <br>e-mail: <a href="mailto:jeremy.rouot@grenoble-inp.org">jeremy.rouot@grenoble-inp.org</a>
     <br>LAAS-CNRS
     <br>7 Avenue du Colonel Roche
     <br>31 077 Toulouse Cedex 4 
@@ -46,10 +46,11 @@
     english <a href="file/cv-jr-en.pdf">[pdf]</a> 
 
     <p align="justify"><b>Research</b>
-    <br><i>Interests:</i>
-    Geometric control theory, Optimization and optimal control, Applications in swimming at
-    low Reynolds number, Nuclear magnetic resonance, Orbital transfer with low thrust,  
-    Global optimization with polynomials, Inverse optimal control, Numerical methods. 
+    <br><i>Interests:</i> 
+    Geometric control theory, Optimization and optimal control,Global optimization with polynomials, Semidefinite programming, Numerical methods. 
+    <br><i>Applications:</i>
+     Swimming at low Reynolds number, Nuclear magnetic resonance, 
+     Orbital transfer with low thrust, Inverse optimal control in Robotics.
     <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
     <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a>
 
