--- a/Teaching/N7/TP-EDP/index.html
+++ b/Teaching/N7/TP-EDP/index.html
@@ -4,9 +4,20 @@
     <TITLE>Teaching - J&eacute&eacuteremy Rouot</TITLE>
   </HEAD>
   <BODY style="color: rgb(0, 0, 0); background-color:#D5DBDC;" link="#0000ee" vlink="#551a8b">
-  <H1>Index of Teaching/ENSEEIHT/TP-EDP/</H1>
-<HR>
-<h3>
-  <a href="./Solutions/">Solutions/</a></h3> 
+  <H1>Index of Teaching/ENSEEIHT/TP-EDP-2A/</H1>
+  <p>
+  Solutions : 
+  <ul>
+      <li>Maillage triangulaire 30x30 : 
+      <a href="./maille-1-30.png"> [png]</a> </li>
+      <li>Maillage mixte (triangles et quadrangles) : 
+      <a href="./maille-2.png"> [png]</a> </li>
+  </ul>
+  <p>
+  Sujet : <a href="./sujet.pdf">[pdf]</a>
+  <p>
+  Sources :
+  <a href="./srcPartieA.zip">[partieA]</a>
+  <a href="./srcPartieB.zip">[partieB]</a>
   </BODY></HTML>
 
