--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <br>
     <br><b>Teaching</b> 
     <br>
-    <a href="Teaching/N7/">ENSEEIHT</a> 
+    <a href="http://rouot.perso.math.cnrs.fr/">ENSEEIHT</a> 
 
 
     <p align="justify"><b>Research</b>
