ifac et cdc JBL

--- a/fr/index.html
+++ b/fr/index.html
@@ -66,6 +66,11 @@ Control. Springerbriefs.  (2016)
 
 <br><b>Submitted papers</b>
 <ul>
+      <li>
+        J. Rouot, J.-B. Lasserre. 
+        On inverse optimal control via polynomial optimization (2017).
+        <a href="../file/cdc2017.pdf">[pdf]</a>
+      </li>
 <li>
 P. Bettiol, B. Bonnard, J. Rouot. Optimal strokes at low Reynolds number: a geometric and
 numerical study of Copepod and Purcell swimmers. (2016) 
