--- a/index.html
+++ b/index.html
@@ -73,12 +73,17 @@
     <br><b>Submitted papers</b>
     <ul>
       <li>
+        J. Rouot, J.-B. Lasserre. 
+        On inverse optimal control via polynomial optimization (2017).
+        <a href="file/cdc2017.pdf">[pdf]</a>
+      </li>
+      <li>
         P. Bettiol, B. Bonnard, J. Rouot. Optimal strokes at low Reynolds number: a geometric and
         numerical study of Copepod and Purcell swimmers. (2016) 
         <a href="file/siam16.pdf">[pdf]</a>
       </li>
       <li>
-        P. Bettiol, B. Bonnard, A. Nolot, J. Rouot. Optimal control theory and the efficiency of the
+        J. Rouot, P. Bettiol, B. Bonnard, A. Nolot. Optimal control theory and the efficiency of the
         swimming mechanism of the Copepod Zooplankton. (2016)
         <a href="file/ifac16.pdf">[pdf]</a>
       </li>
