--- a/fr/index.html
+++ b/fr/index.html
@@ -45,6 +45,11 @@ french <a href="../file/cv-jr-fr.pdf">[pdf]</a>
 english <a href="../file/cv-jr-en.pdf">[pdf]</a> 
 
 
+<br>
+<br><b>Teaching</b> 
+<br>
+<a href="http://rouot.perso.math.cnrs.fr/Teaching/ENSEEIHT/">ENSEEIHT</a> 
+
 <p align="justify"><b>Research</b>
     <br><i>Interests:</i> 
     Geometric control theory, Optimization and optimal control, Global optimization with polynomials, Semidefinite programming, Numerical methods. 
