--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <font size="+3">
       J&eacuter&eacutemy Rouot</font> 
 
-    <img style="height: 213px; float: left;" alt="" src="img/jr.jpg" hspace="50">
+    <img style="height: 213px; float: left;" alt="" src="img/jr.png" hspace="50">
     <br>
 
     <br>
