--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </li>
     </ul>
 
-    <br><b>Papers in books with peer reviews</b>
+    <br><b>Papers in books with peer review</b>
     <ul>
       <li>
         P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon, J. Rouot. The three links Purcell swimmer
@@ -104,7 +104,7 @@
       </li>
     </ul>
 
-    <br><b>Proceedings with peer reviews</b>
+    <br><b>Proceedings with peer review</b>
     <ul>
       <li>
         B. Bonnard, M. Chyba, J. Rouot, D. Takagi. A Numerical Approach to the Optimal Control
