--- a/index.html
+++ b/index.html
@@ -62,8 +62,15 @@
     <br><b>Submitted monograph</b>
     <ul>
       <li>
-        B. Bonnard, M. Chyba, J. Rouot. Working Examples In Geometric Optimal
-        Control. Springerbriefs.  (2016)
+        <i>
+          Geometric and Numerical Optimal
+          Control with Application to
+          Swimming at Low Reynolds
+          Number and Medical Resonance
+          Imaging. Springerbriefs  (2016).
+        </i>
+        <br>
+        (with B. Bonnard, M. Chyba)
         <a href="file/monograph16.pdf">[pdf]</a>
       </li>
     </ul>
@@ -71,35 +78,62 @@
     <br><b>Submitted papers</b>
     <ul>
       <li>
-        J. Rouot, J.-B. Lasserre. 
-        On inverse optimal control via polynomial optimization (2017).
-        <a href="file/cdc2017.pdf">[pdf]</a>
+        <i>
+        On inverse optimal control via polynomial optimization (2017). 
+        </i>
+        <br>
+        (with J.-B. Lasserre)
+        <a href="file/cdc2017.pdf">[pdf]</a> 
       </li>
       <li>
-        P. Bettiol, B. Bonnard, J. Rouot. Optimal strokes at low Reynolds number: a geometric and
-        numerical study of Copepod and Purcell swimmers. (2016) 
+        <i>
+        Optimal strokes at low Reynolds number: a geometric and
+        numerical study of Copepod and Purcell swimmers (2016). 
+        </i>
+        <br>
+        (with P. Bettiol, B. Bonnard)
         <a href="file/siam16.pdf">[pdf]</a>
       </li>
       <li>
-        J. Rouot, P. Bettiol, B. Bonnard, A. Nolot. Optimal control theory and the efficiency of the
-        swimming mechanism of the Copepod Zooplankton. (2016)
+        <i>
+       Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton (2016). 
+        </i>
+       <br>
+       (with P. Bettiol, B. Bonnard, A. Nolot)
         <a href="file/ifac16.pdf">[pdf]</a>
+      </li>
+      <li>
+        <i>
+       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case (2017). 
+        </i>
+       <br>
+       (with P. Bettiol, B. Bonnard, A. Nolot)
+        <a href="file/copepod-cocv.pdf">[pdf]</a>
       </li>
     </ul>
 
     <br><b>Papers in books with peer review</b>
     <ul>
       <li>
-        P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon, J. Rouot. The three links Purcell swimmer
-        and some geometric problems related to periodic optimal controls. Variational methods in
-        Imaging and geometric control, published in 
-        Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
+        <i>
+       The three links Purcell swimmer and some geometric problems related to periodic optimal controls. 
+        </i>
+       <br>
+       Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
+       <br>
+       (with P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon)
         <a href="file/ricam15.pdf">[pdf]</a>
       </li>
-      <li> B. Bonnard, H. Henninger, J. Rouot. Lunar perturbation of the metric 
+      <li> 
+        <i>
+        Lunar perturbation of the metric 
         associated to the averaged orbital transfer. 
+        </i>
+        <br>
         Analysis and geometry in control theory and its applications, 
-        published in Springer InDam series, vol. 11, 2015.
+        published in Springer InDam series, vol. 11, 2015. 
+        <br>
+        (with B. Bonnard, H. Henninger)
         <a href="file/zermelo14.pdf">[pdf]</a>
       </li>
     </ul>
@@ -107,15 +141,26 @@
     <br><b>Proceedings with peer review</b>
     <ul>
       <li>
-        B. Bonnard, M. Chyba, J. Rouot, D. Takagi. A Numerical Approach to the Optimal Control
-        and Efficiency of the Copepod Swimmer. In Proceedings of the 55th IEEE Conference on
+        <i>
+        A Numerical Approach to the Optimal Control
+        and Efficiency of the Copepod Swimmer. 
+        </i>
+        <br>
+        55th IEEE Conference on
         Decision and Control, 2016.
+        <br>
+        (with B. Bonnard, M. Chyba, D. Takagi)
         <a href="file/cdc-copepod16.pdf">[pdf]</a>
       </li>
       <li>
-        B. Bonnard, A. Jacquemard, J. Rouot. Optimal Control of an Ensemble of Bloch Equations
-        with Applications in MRI. In Proceedings of the 55th IEEE Conference on Decision and
-        Control, 2016.
+        <i>
+        Optimal Control of an Ensemble of Bloch Equations
+        with Applications in MRI. 
+        </i>
+        <br>
+        55th IEEE Conference on Decision and Control, 2016.
+        <br>
+        (with B. Bonnard, A. Jacquemard)
         <a href="file/cdc-mri16.pdf">[pdf]</a>
       </li>
     </ul>
