--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <ul>
       <li>
         <i>
-       The three links Purcell swimmer and some geometric problems related to periodic optimal controls. 
+       The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
         </i>
        <br>
        Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
