--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
     <br><b>Teaching</b> 
     <br>
-    <a href="Teaching/ENSEEIHT/">ENSEEIHT</a> 
+    <a href="Teaching/index.html">ENSEEIHT</a> 
 
 
     <p align="justify"><b>Research</b>
