--- a/index.html
+++ b/index.html
@@ -165,10 +165,28 @@
       </li>
     </ul>
 
+    <br><b>Miscellaneous</b>
+    <ul>
+      <li>
+        <i>
+        Geometric and numerical methods in optimal control and applications to the swimming problem at low Reynolds number and to low thrust orbital transfer.
+        </i>  
+        <br>
+        PhD Thesis, 2016,
+        <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
+      </li>
+      <li>
+        <i>
+          Optimal Transportation : Applications to Image processing.
+        </i>
+        <br>
+        Memoir, 2nd year of Engineer School ENSIMAG, 2012,
+        <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf">[pdf]</a> 
+      </li>
+    </ul>
+
     <p align="justify"><b>Education</b>
-    <br>PhD in Applied Mathematics
-    (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016), 
-    <i>advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
+    <br>PhD in Applied Mathematics (<a href="http://unice.fr/" style="text_decoration: none;">Univ. de Nice Sophia Antipolis</a>, 2016)
     <br>Ing&eacutenieur in Applied Mathematics / Computer Science
     (<a href="http://ensimag.grenoble-inp.fr/welcome/" style="text-decoration: 
     none;">Grenoble INP - ENSIMAG</a>, 2013)
