--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           Optimal Transportation : Applications to Image processing.
         </i>
         <br>
-        Memoir, 2nd year of Engineer School ENSIMAG, 2012,
+        Memoir, 2012,
         <i>Advisors:</i> Emmanuel Maitre and &Eacutedouard Oudet. <a href="file/rapport2A.pdf">[pdf]</a> 
       </li>
     </ul>
