--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
     <ul>
       <li>
         <i>
+          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017).
+        </i>
+        <br>
+        (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
+      </li>
+      <li>
+        <i>
        Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case (2017). 
         </i>
        <br>
