--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         </i>
         <br>
         (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
+        <a href="file/mri2017.pdf">[pdf]</a>
       </li>
       <li>
         <i>
