--- a/index.html
+++ b/index.html
@@ -21,21 +21,18 @@
     <br>
 
     <font style="font-weight: bold;" size="+1">
-      Postdoctoral researcher</font> 
-    <br>Laboratory for Analysis and Architecture of Systems
-    <a href="http://www.laas.fr" style="text-decoration: none;">(LAAS)</a> 
-    , Toulouse.
+      Teacher and Researcher</font> 
+    <br> ERMESS laboratory at EPF-Ecoles d'Ingénieurs, Troyes.
     <br>
-    <br><a href="http://www.laas.fr" style="text-decoration: none;"><img src="img/logo_laas.png" HEIGHT=90></a>
-    <a href="http://www.cnrs.fr" style="text-decoration: none;"><img src="img/logo_cnrs.jpeg" HEIGHT=90 BORDER=0 align=bottom></a>
+    <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=90></a>
     <br>
     <br>
 
     <p align="justify"><b>Address</b>
-    <br>e-mail: <a href="mailto:jeremy.rouot@grenoble-inp.org">jeremy.rouot@grenoble-inp.org</a>
-    <br>LAAS-CNRS
-    <br>7 Avenue du Colonel Roche
-    <br>31 077 Toulouse Cedex 4 
+    <br>e-mail: <a href="mailto:jeremy.rouot@epf.fr">jeremy.rouot@epf.fr</a>
+    <br> EPF CAMPUS DE TROYES
+    <br> 2, rue F. Sastre
+    <br> 10430 Rosières-près-Troyes
 
     <br>
     <br><b>CV  </b> 
@@ -51,12 +48,13 @@
 
     <p align="justify"><b>Research</b>
     <br><i>Interests:</i> 
-    Geometric control theory, Optimization and optimal control, Global optimization with polynomials, Semidefinite programming, Numerical methods. 
+    Geometric control theory, Optimization and optimal control, Numerical methods, Fracture mechanics. 
     <br><i>Applications:</i>
      Swimming at low Reynolds number, Nuclear magnetic resonance, 
      Orbital transfer with low thrust, Inverse optimal control in Robotics.
-    <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
-    <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a>
+<!--    <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
+<br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a> -->
+
 
     <br>
     <br><b>Submitted monograph</b>
