--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <font style="font-weight: bold;" size="+1">
       Teacher and Researcher</font> 
-    <br> ERMESS laboratory at EPF-Ecoles d'Ingénieurs, Troyes.
+    <br> EPF-Ecoles d'Ingénieurs, Troyes.
     <br>
     <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=90></a>
     <br>
