--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <br>
 
     <font style="font-weight: bold;" size="+1">
-      Teacher and Researcher</font> 
+      Lecturer and Researcher</font> 
     <br> EPF-Ecoles d'Ingénieurs, Troyes.
     <br>
     <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=90></a>
@@ -93,14 +93,6 @@
       </li>
       <li>
         <i>
-        On inverse optimal control via polynomial optimization (2017). 
-        </i>
-        <br>
-        (with J.-B. Lasserre)
-        <a href="file/cdc2017.pdf">[pdf]</a> 
-      </li>
-      <li>
-        <i>
         Optimal strokes at low Reynolds number: a geometric and
         numerical study of Copepod and Purcell swimmers (2016). 
         </i>
@@ -146,6 +138,18 @@
 
     <br><b>Proceedings with peer review</b>
     <ul>
+      <li>
+        <i>
+        On inverse optimal control via polynomial optimization (2017). 
+        </i>
+        <br>
+        56th IEEE Conference on
+        Decision and Control, 2017.
+        <br>
+        <br>
+        (with J.-B. Lasserre)
+        <a href="file/cdc2017.pdf">[pdf]</a> 
+      </li>
       <li>
         <i>
         A Numerical Approach to the Optimal Control
