--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <ul>
       <li>
         <i>
-        On inverse optimal control via polynomial optimization (2017). 
+        On inverse optimal control via polynomial optimization. 
         </i>
         <br>
         56th IEEE Conference on
