--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
     french <a href="file/cv-jr-fr.pdf">[pdf]</a> 
     english <a href="file/cv-jr-en.pdf">[pdf]</a> 
 
+    <!--
     <br>
     <br><b>Teaching</b> 
     <br>
     <a href="Teaching/index.html">ENSEEIHT</a> 
-
+    -->
 
     <p align="justify"><b>Research</b>
     <br><i>Interests:</i> 
@@ -75,6 +76,18 @@
 
     <br><b>Submitted papers</b>
     <ul>
+
+      <li>
+        <i>
+          Sub-Riemannian geometry, Hamiltonian
+          dynamics, micro-swimmers, Copepod nauplii and
+          Copepod robot
+        </i>
+       <br>
+       (with B. Bonnard, M. Chyba, D. Takagi)
+        <a href="file/survey-nageurs17.pdf">[pdf]</a>
+      </li>
+
       <li>
         <i>
           Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017).
@@ -83,23 +96,7 @@
         (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
         <a href="file/mri2017.pdf">[pdf]</a>
       </li>
-      <li>
-        <i>
-       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case (2017). 
-        </i>
-       <br>
-       (with P. Bettiol, B. Bonnard, A. Nolot)
-        <a href="file/copepod-cocv.pdf">[pdf]</a>
-      </li>
-      <li>
-        <i>
-        Optimal strokes at low Reynolds number: a geometric and
-        numerical study of Copepod and Purcell swimmers (2016). 
-        </i>
-        <br>
-        (with P. Bettiol, B. Bonnard)
-        <a href="file/siam16.pdf">[pdf]</a>
-      </li>
+
       <li>
         <i>
        Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton (2016). 
@@ -107,6 +104,29 @@
        <br>
        (with P. Bettiol, B. Bonnard, A. Nolot)
         <a href="file/ifac16.pdf">[pdf]</a>
+      </li>
+
+    </ul>
+
+    <br><b>Papers in journals with peer review</b>
+    <ul>
+      <li>
+        <i>
+        Optimal strokes at low Reynolds number: a geometric and
+        numerical study of Copepod and Purcell swimmers, To Appear 2017. 
+        </i>
+        <br>
+        (with P. Bettiol, B. Bonnard)
+        <a href="file/siam16.pdf">[pdf]</a>
+      </li>
+
+      <li>
+        <i>
+       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear 2017. 
+        </i>
+       <br>
+       (with P. Bettiol, B. Bonnard, A. Nolot)
+        <a href="file/copepod-cocv.pdf">[pdf]</a>
       </li>
     </ul>
 
@@ -176,6 +196,19 @@
 
     <br><b>Miscellaneous</b>
     <ul>
+
+      <li>
+        <i>
+          Sub-Riemannian geometry, 
+          Hamiltonian dynamics,
+          micro-swimmers, Copepod nauplii and Copepod robot 
+        </i>
+        <br>
+        Slides on the Copepod swimmer. 
+      <a href="file/planches-copepod.pdf">[pdf]</a>
+        </br>
+      </li>
+
       <li>
         <i>
         Geometric and numerical methods in optimal control and applications to the swimming problem at low Reynolds number and to low thrust orbital transfer.
@@ -184,6 +217,8 @@
         PhD Thesis, 2016,
         <i>Advisors:</i> Bernard Bonnard and Jean-Baptiste Pomet. <a href="file/thesis-rouot.pdf">[pdf]</a> <a href="https://tel.archives-ouvertes.fr/tel-01472370v2">[link]</a> 
       </li>
+
+
       <li>
         <i>
           Optimal Transportation : Applications to Image processing.
