--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <br><b>CV  </b> 
     <br>
     french <a href="file/cv-jr-fr.pdf">[pdf]</a> 
-    english <a href="file/cv-jr-en.pdf">[pdf]</a> 
+    <!--    english <a href="file/cv-jr-en.pdf">[pdf]</a> -->
 
     <!--
     <br>
@@ -66,7 +66,7 @@
           Control with Application to
           Swimming at Low Reynolds
           Number and Medical Resonance
-          Imaging. Springerbriefs  (2016).
+          Imaging. Springerbriefs  (2016). (118 pages)
         </i>
         <br>
         (with B. Bonnard, M. Chyba)
@@ -81,7 +81,7 @@
         <i>
           Sub-Riemannian geometry, Hamiltonian
           dynamics, micro-swimmers, Copepod nauplii and
-          Copepod robot
+          Copepod robot (2018). (40 pages)
         </i>
        <br>
        (with B. Bonnard, M. Chyba, D. Takagi)
@@ -90,21 +90,13 @@
 
       <li>
         <i>
-          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017).
+          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). (37 pages)
         </i>
         <br>
         (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
         <a href="file/mri2017.pdf">[pdf]</a>
       </li>
 
-      <li>
-        <i>
-       Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton (2016). 
-        </i>
-       <br>
-       (with P. Bettiol, B. Bonnard, A. Nolot)
-        <a href="file/ifac16.pdf">[pdf]</a>
-      </li>
 
     </ul>
 
@@ -112,20 +104,20 @@
     <ul>
       <li>
         <i>
+          P. Bettiol, B. Bonnard and J. Rouot,
         Optimal strokes at low Reynolds number: a geometric and
-        numerical study of Copepod and Purcell swimmers, To Appear 2017. 
+        numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018. 
         </i>
         <br>
-        (with P. Bettiol, B. Bonnard)
         <a href="file/siam16.pdf">[pdf]</a>
       </li>
 
       <li>
         <i>
-       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear 2017. 
+        P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
+       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018.
         </i>
        <br>
-       (with P. Bettiol, B. Bonnard, A. Nolot)
         <a href="file/copepod-cocv.pdf">[pdf]</a>
       </li>
     </ul>
@@ -134,16 +126,17 @@
     <ul>
       <li>
         <i>
+         P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
        The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
         </i>
        <br>
        Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
        <br>
-       (with P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon)
         <a href="file/ricam15.pdf">[pdf]</a>
       </li>
       <li> 
         <i>
+        B. Bonnard, H. Henninger and J. Rouot,
         Lunar perturbation of the metric 
         associated to the averaged orbital transfer. 
         </i>
@@ -151,7 +144,6 @@
         Analysis and geometry in control theory and its applications, 
         published in Springer InDam series, vol. 11, 2015. 
         <br>
-        (with B. Bonnard, H. Henninger)
         <a href="file/zermelo14.pdf">[pdf]</a>
       </li>
     </ul>
@@ -160,17 +152,30 @@
     <ul>
       <li>
         <i>
+        J.Rouot and J.-B. Lasserre, 
         On inverse optimal control via polynomial optimization. 
         </i>
         <br>
         56th IEEE Conference on
         Decision and Control, 2017.
         <br>
-        (with J.-B. Lasserre)
         <a href="file/cdc2017.pdf">[pdf]</a> 
       </li>
+
       <li>
         <i>
+        P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
+       Optimal control theory and the efficiency of the swimming mechanism of the Copepod Zooplankton. 
+        </i>
+        <br>
+        In Proceedings of the 20th IFAC World Congress, Toulouse, 2017.
+       <br>
+        <a href="file/ifac16.pdf">[pdf]</a>
+      </li>
+
+      <li>
+        <i>
+        B. Bonnard, M. Chyba, J. Rouot and D. Takagi,
         A Numerical Approach to the Optimal Control
         and Efficiency of the Copepod Swimmer. 
         </i>
@@ -178,18 +183,17 @@
         55th IEEE Conference on
         Decision and Control, 2016.
         <br>
-        (with B. Bonnard, M. Chyba, D. Takagi)
         <a href="file/cdc-copepod16.pdf">[pdf]</a>
       </li>
       <li>
         <i>
+      B. Bonnard, A. Jacquemard and J. Rouot,
         Optimal Control of an Ensemble of Bloch Equations
         with Applications in MRI. 
         </i>
         <br>
         55th IEEE Conference on Decision and Control, 2016.
         <br>
-        (with B. Bonnard, A. Jacquemard)
         <a href="file/cdc-mri16.pdf">[pdf]</a>
       </li>
     </ul>
