work in progress

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       Lecturer and Researcher</font> 
     <br> EPF-Ecoles d'Ingénieurs, Troyes.
     <br>
-    <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=90></a>
+    <br><a href="http://www.epf.fr" style="text-decoration: none;"><img src="img/logo_epf.png" HEIGHT=80></a>
     <br>
     <br>
 
@@ -56,8 +56,29 @@
 <!--    <br>Member of the <a href="https://www.laas.fr/public/en/mac" style="text-decoration: none;">MAC</a> team
 <br> Involved in the <a href="http://taming.laas.fr/" style="text-decoration: none;">ERC-ADG project TAMING</a> -->
 
-
     <br>
+    <br><b>Work in progres</b>
+    <ul>
+
+      <li>
+        <i>
+          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). 
+        </i>
+        <br>
+        (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
+        <a href="file/mri2017.pdf">[pdf]</a>
+      </li>
+
+      <li>
+        <i>
+          Metric approximation of minimum time control systems.
+        </i>
+        <br>
+        (with J.-B. Caillau, J.-B. Pomet)
+        <a href="file/finsler2018.pdf">[pdf]</a>
+      </li>
+    </ul>
+
     <br><b>Submitted monograph</b>
     <ul>
       <li>
@@ -88,37 +109,40 @@
         <a href="file/survey-nageurs17.pdf">[pdf]</a>
       </li>
 
-      <li>
-        <i>
-          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). (37 pages)
-        </i>
-        <br>
-        (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
-        <a href="file/mri2017.pdf">[pdf]</a>
-      </li>
 
 
     </ul>
 
     <br><b>Papers in journals with peer review</b>
     <ul>
-      <li>
-        <i>
-          P. Bettiol, B. Bonnard and J. Rouot,
-        Optimal strokes at low Reynolds number: a geometric and
-        numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018. 
-        </i>
-        <br>
-        <a href="file/siam16.pdf">[pdf]</a>
-      </li>
 
       <li>
         <i>
         P. Bettiol, B. Bonnard, A. Nolot and J. Rouot,
-       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018.
+       Sub-Riemannian geometry and swimming at low Reynolds number: the Copepod case, To Appear in ESAIM: COCV, 2018 (29p.).
+        </i>
+        <a href="file/copepod-cocv.pdf">[pdf]</a>
+      </li>
+
+
+      <li>
+        <i>
+          P. Bettiol, B. Bonnard and J. Rouot,
+        Optimal strokes at low Reynolds number: a geometric and
+        numerical study of Copepod and Purcell swimmers, To Appear in SIAM J. Control Optim., 2018 (24p.). 
+        </i>
+        <a href="file/siam16.pdf">[pdf]</a>
+      </li>
+
+
+      <li>
+        <i>
+         P. Bettiol, B. Bonnard, L. Giraldi, P. Martinon and J. Rouot,
+       The Three-link Purcell swimmer: some geometric problems related to periodic optimal controls. 
         </i>
        <br>
-        <a href="file/copepod-cocv.pdf">[pdf]</a>
+       Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016 (27p.).
+        <a href="file/ricam15.pdf">[pdf]</a>
       </li>
     </ul>
 
@@ -131,9 +155,9 @@
         </i>
        <br>
        Variational methods in Imaging and geometric control, published in Radon Series on Computational and Applied Math, vol. 18, de Gruyter, 2016.
-       <br>
         <a href="file/ricam15.pdf">[pdf]</a>
       </li>
+
       <li> 
         <i>
         B. Bonnard, H. Henninger and J. Rouot,
@@ -143,7 +167,6 @@
         <br>
         Analysis and geometry in control theory and its applications, 
         published in Springer InDam series, vol. 11, 2015. 
-        <br>
         <a href="file/zermelo14.pdf">[pdf]</a>
       </li>
     </ul>
@@ -158,7 +181,6 @@
         <br>
         56th IEEE Conference on
         Decision and Control, 2017.
-        <br>
         <a href="file/cdc2017.pdf">[pdf]</a> 
       </li>
 
@@ -169,7 +191,6 @@
         </i>
         <br>
         In Proceedings of the 20th IFAC World Congress, Toulouse, 2017.
-       <br>
         <a href="file/ifac16.pdf">[pdf]</a>
       </li>
 
@@ -182,7 +203,6 @@
         <br>
         55th IEEE Conference on
         Decision and Control, 2016.
-        <br>
         <a href="file/cdc-copepod16.pdf">[pdf]</a>
       </li>
       <li>
@@ -193,7 +213,6 @@
         </i>
         <br>
         55th IEEE Conference on Decision and Control, 2016.
-        <br>
         <a href="file/cdc-mri16.pdf">[pdf]</a>
       </li>
     </ul>
