work in progress

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
       <li>
         <i>
-          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). 
+          Working notes on the time minimal saturation of a pair of spins and application in Magnetic Resonance Imaging.
         </i>
         <br>
-        (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
-        <a href="file/mri2017.pdf">[pdf]</a>
+        (with B. Bonnard, O. Cots)
+        <a href="file/mri2018.pdf">[pdf]</a>
       </li>
 
       <li>
@@ -76,6 +76,15 @@
         <br>
         (with J.-B. Caillau, J.-B. Pomet)
         <a href="file/finsler2018.pdf">[pdf]</a>
+      </li>
+
+      <li>
+        <i>
+          Algebraic-geometric techniques for the feedback classification and robustness of the optimal control of a pair of Bloch equations with application to magnetic resonance imaging (2017). 
+        </i>
+        <br>
+        (with B. Bonnard, O. Cots, J.-C. Faug&egravere, A. Jacquemard, M. Safey El Din, T. Verron)
+        <a href="file/mri2017.pdf">[pdf]</a>
       </li>
     </ul>
 
