--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <br>
     <br><b>CV  </b> 
     <br>
-    french <a href="file/cv-jr-fr.pdf">[pdf]</a> 
-    <!--    english <a href="file/cv-jr-en.pdf">[pdf]</a> -->
+    french <a href="file/cv.pdf">[pdf]</a> 
 
     <!--
     <br>
