--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           Working notes on the time minimal saturation of a pair of spins and application in Magnetic Resonance Imaging.
         </i>
         <br>
-        (with B. Bonnard, O. Cots)
+        (with B. Bonnard, O. Cots, T. Verron)
         <a href="file/mri2018.pdf">[pdf]</a>
       </li>
 
